--- a/style1.css
+++ b/style1.css
@@ -84,7 +84,8 @@ div.content {
   text-align: left;
 }
 .items img {
-  box-shadow: -20px 20px 15px grey;
+  /* box-shadow: -20px 20px 15px grey; */
+  box-shadow:1px 2px 10px 2px #909090 ;
   width: 100%;
 }
 /* .me3{
