--- a/style1.css
+++ b/style1.css
@@ -72,6 +72,41 @@ div.content {
 
 /* END */
 
+.download-links{
+  width: 85%;
+  height: 100px;
+  align-items: center;
+  float:right;
+}
+
+
+.github-link {
+  display: inline-block;
+  margin-top: 10px;
+  margin-left: 25px;
+  padding: 5px 10px;
+  background-color: #121417;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.github-link:hover {
+  background-color: #3c444d;
+}
+
+.download-link {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+}
+.download-link:hover {
+  background-color: #0056b3;
+}
+
 .sticky {
   position: sticky;
   top: 0;
@@ -219,7 +254,7 @@ width: 50px;
   position: absolute;
   transition: 1s; 
 }
-main  
+main
   {
    margin-left:200px;
   margin-top: 50px;
